<resources>
    <string name="app_name">Wheelchair</string>

    <string name="title_activity_intro_screen">IntroScreenActivity</string>
    <string name="logo">logo</string>
    <string name="title_activity_login_screen">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="i_wanna_skip_this_tour">I wanna skip this tour</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="forgot_yours_password">Forgot yours password?</string>
    <string name="continue_text">Continue</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="welcome">Welcome!</string>
</resources>
