<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_14dp"
    android:background="@color/colorBackground"
    >

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/padding_14dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginBottom="@dimen/padding_14dp"
        android:focusable="true"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="@dimen/padding_14dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_text"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/padding_14dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_yours_password"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:textColor="@android:color/darker_gray"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_facebook"
        android:layout_marginBottom="@dimen/padding_14dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        >
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_google"
        android:layout_marginBottom="@dimen/padding_14dp"
        android:background="@android:color/white"
        android:textColor="@android:color/secondary_text_light"
        >
    </Button>

</LinearLayout>