<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_14dp"
    android:background="@color/colorBackground"
    >

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo"
        android:src="@mipmap/mainlogo"
        android:layout_marginBottom="@dimen/margin_bottom"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainlogo"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/mainlogo"
        android:width="@dimen/button_width"
        android:background="@android:color/white"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/registration"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/i_wanna_skip_this_tour" />

</RelativeLayout>
